--- a/index.css
+++ b/index.css
@@ -273,7 +273,7 @@ h5 {
 
 .title {
   font-family: "Montserrat", sans-serif;
-  font-size: 36px;
+
   font-weight: 500;
   margin-bottom: 36px;
   color: var(--light);
@@ -450,7 +450,7 @@ h5 {
   width: 100%;
   height: 100%;
   background: #fff;
-  padding: 30px 0;
+  padding: 40px 0;
   border-radius: 5px;
   box-shadow: 0 0 20px -4px #5a6280;
   background-color: var(--primary);
@@ -482,7 +482,7 @@ h2 {
 
 /* Start: Featured Mentor Section */
 .mentor {
-  background: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5));
+  background: linear-gradient(rgba(33, 150, 243, 0.5), var(--primary) 40%);
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -491,11 +491,10 @@ h2 {
 .title-mentor {
   font-size: 36px;
   font-weight: 500;
-  margin-bottom: 36px;
+
   color: var(--light);
   text-align: center;
-  margin-top: 3%;
-  padding-top: 2%;
+  padding-top: 3%;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -584,7 +583,7 @@ img {
 .stories {
   text-align: center;
   width: 100%;
-  padding-top: 1%;
+  padding-top: 5%;
   background: linear-gradient(var(--primary) 40%, rgba(33, 150, 243, 0.5));
 }
 
@@ -609,7 +608,7 @@ img {
 
 .Success {
   font-family: "Montserrat", sans-serif;
-  font-size: 36px;
+
   color: var(--light);
   font-weight: 500;
   text-align: center;
@@ -634,6 +633,7 @@ img {
   background-size: cover;
   text-align: center;
   position: relative;
+  padding-bottom: 3%;
 }
 
 .card-features {
@@ -645,7 +645,6 @@ img {
   background: #fff, transparent;
   margin-top: 3%;
   margin-left: 1.5%;
-  margin-bottom: 5%;
   margin-right: 30px;
 }
 
@@ -670,12 +669,12 @@ img {
 }
 
 .success-footer {
-  margin-top: 3%;
+  margin-top: 1%;
   color: white;
   text-align: center;
   font-weight: 600;
-
   font-family: "Rubik";
+  font-size: 26px;
 }
 
 .cta-success-story,
@@ -702,4 +701,128 @@ img {
     height: auto;
     margin: 10px 0;
   }
+}
+
+/* Start: How It Works  */
+
+.testimonials {
+  text-align: center;
+  width: 100%;
+  padding-bottom: 3%;
+  background: linear-gradient(rgba(33, 150, 243, 0.5), var(--primary) 40%);
+  padding-top: 5%;
+}
+.testi-title {
+  font-family: "Montserrat", sans-serif;
+
+  color: var(--light);
+  font-weight: 500;
+  text-align: center;
+}
+
+.visuallyhidden {
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  opacity: 0;
+}
+
+.testi-container {
+  overflow: hidden;
+  padding: 20px;
+}
+
+.cardcarousel {
+  --card-width: 100%;
+  --card-max-width: 480px;
+  --card-height: 550px;
+  --carousel-min-width: 600px;
+  z-index: 1;
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  height: var(--card-height);
+  min-width: var(--carousel-min-width);
+  transition: filter 0.3s ease;
+}
+
+@media screen and (max-width: 640px) {
+  .cardcarousel {
+    margin-left: calc((100vw - var(--carousel-min-width) - 40px) / 2);
+  }
+}
+
+.cardcarousel.smooth-return {
+  transition: all 0.2s ease;
+}
+
+.cardcarousel .card-testi {
+  background: rgba(15, 107, 182, 0.5);
+  width: var(--card-width);
+  max-width: var(--card-max-width);
+  text-align: center;
+  padding: 1em;
+  min-width: 250px;
+  height: var(--card-height);
+  position: absolute;
+  margin: 0 auto;
+  color: rgba(212, 204, 204, 0.5);
+  transition: inherit;
+  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  border-radius: 1em;
+  filter: brightness(0.9);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.cardcarousel.highlight {
+  filter: brightness(1);
+}
+
+.card-testi:nth-of-type(1) .pic-container {
+  background-image: url("assets/mentor\ 3.jpg");
+}
+
+.card-testi:nth-of-type(2) .pic-container {
+  background-image: url("assets/grad2.jpeg");
+}
+
+.card-testi:nth-of-type(3) .pic-container {
+  background-image: url("assets/mentor\ 2.jpg");
+}
+
+.card-testi:nth-of-type(4) .pic-container {
+  background-image: url("assets/grad1.jpeg");
+}
+
+.card-testi:nth-of-type(5) .pic-container {
+  background-image: url("assets/grad3.jpeg");
+}
+
+.pic-container {
+  width: 15em;
+  height: 15em;
+  position: relative;
+  background-size: cover;
+  margin-bottom: 2em;
+  border-radius: 100%;
+  -webkit-box-shadow: inset 0px 0px 17px 0px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: inset 0px 0px 17px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0px 0px 17px 0px rgba(0, 0, 0, 0.3);
+}
+
+.pic-container::after {
+  content: "";
+  display: block;
+  width: 120%;
+  height: 120%;
+  border: solid 3px rgba(99, 86, 86, 0.1);
+  border-radius: 100%;
+  position: absolute;
+  top: calc(-10% - 3px);
+  left: calc(-10% - 3px);
 }
