--- a/index.css
+++ b/index.css
@@ -273,7 +273,6 @@ h5 {
 
 .title {
   font-family: "Montserrat", sans-serif;
-
   font-weight: 500;
   margin-bottom: 36px;
   color: var(--light);
@@ -730,6 +729,17 @@ img {
 .testi-container {
   overflow: hidden;
   padding: 20px;
+}
+
+.card-testi {
+  padding: 24px;
+  border-radius: 12px;
+  color: var(--primary);
+  max-width: calc(50% - 30px);
+  position: relative;
+  background-color: #0b305a;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 }
 
 .cardcarousel {
