--- a/scholarships/scholarship.css
+++ b/scholarships/scholarship.css
@@ -23,13 +23,9 @@ body {
   font-family: "Urbanist", sans-serif;
   background-color: var(--primary);
   overflow-x: hidden;
+  text-align: center;
 }
 
-.container {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 0 16px;
-}
 /* Start: Navigation Bar */
 
 .nav-link:hover {
@@ -62,3 +58,141 @@ body {
   color: var(--primary);
 }
 /* End: Navigation Bar */
+
+#scholarships {
+  width: 100%;
+  height: 100%;
+
+  background-image: linear-gradient(
+    var(--primary) 40%,
+    rgba(33, 150, 243, 0.5)
+  );
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  position: relative;
+}
+
+.scholarships-banner {
+  padding-top: 10%;
+}
+
+.banner-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+}
+
+.banner-tagline {
+  font-size: 24px;
+  font-family: "lato", sans-serif;
+}
+
+.container-scholarships {
+  margin-top: 5%;
+  padding: 0 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.name {
+  color: #0a2647;
+  padding-top: 1%;
+  font-size: 30px;
+  font-family: "lato", sans-serif;
+  font-weight: 500;
+}
+.card {
+  height: 280px;
+  max-width: 350px;
+  margin: 0 20px;
+  background: white;
+  transition: 0.4s;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+.card:hover {
+  height: 470px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.card .img {
+  height: 200px;
+  width: 100%;
+}
+.card .img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.card .top-text {
+  padding: 5px;
+}
+.card .top-text .name {
+  font-size: 25px;
+  font-weight: 600;
+  color: #202020;
+}
+.card .top-text p {
+  font-size: 20px;
+  font-weight: 600;
+  font-family: "Rubik", sans-serif;
+  line-height: 20px;
+}
+.card .bottom-text {
+  padding: 0 20px 10px 20px;
+  margin-top: 5px;
+  background: white;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.1s;
+}
+.card:hover .bottom-text {
+  opacity: 1;
+  visibility: visible;
+}
+.card .bottom-text .text {
+  text-align: justify;
+}
+.card .bottom-text .btn {
+  margin: 10px 0;
+  text-align: left;
+}
+.card .bottom-text .btn a {
+  text-decoration: none;
+  background: #ffb100;
+  color: #0a2647;
+  padding: 5px 8px;
+  border-radius: 3px;
+  display: inline-flex;
+  transition: 0.2s;
+}
+.card .bottom-text .btn a:hover {
+  transform: scale(0.9);
+  font-size: larger;
+}
+
+.scholarships-footer {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+.btn-cta,
+.btn-cta:hover {
+  text-decoration: none;
+  background: #ffb100;
+  color: #0a2647;
+  padding: 5px 8px;
+  border-radius: 3px;
+  font-size: 20px;
+}
+@media screen and (max-width: 768px) {
+  #scholarships {
+    padding-top: 10%;
+  }
+  .container-scholarships {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .card {
+    max-width: 700px;
+    margin: 20px 0;
+  }
+}
