--- a/scholarships/scholarship.css
+++ b/scholarships/scholarship.css
@@ -59,6 +59,8 @@ body {
 }
 /* End: Navigation Bar */
 
+/* Start: Scholarships*/
+
 #scholarships {
   width: 100%;
   height: 100%;
@@ -121,6 +123,7 @@ body {
 .card .img img {
   height: 100%;
   width: 100%;
+  border-radius: 3%;
   object-fit: cover;
 }
 .card .top-text {
@@ -143,7 +146,7 @@ body {
   background: white;
   opacity: 0;
   visibility: hidden;
-  transition: 0.1s;
+  transition: 0.3s;
 }
 .card:hover .bottom-text {
   opacity: 1;
@@ -166,8 +169,7 @@ body {
   transition: 0.2s;
 }
 .card .bottom-text .btn a:hover {
-  transform: scale(0.9);
-  font-size: larger;
+  transform: scale(1);
 }
 
 .scholarships-footer {
@@ -196,3 +198,5 @@ body {
     margin: 20px 0;
   }
 }
+
+/* End: Scholarships*/
