modified:   scholarships/scholarship.css

--- a/scholarships/scholarship.css
+++ b/scholarships/scholarship.css
@@ -147,7 +147,7 @@ body {
   visibility: visible;
 }
 .card .bottom-text .text {
-  text-align: justify;
+  text-align: center;
 }
 .card .bottom-text .btn {
   margin: 10px 0;
