modified:   About Us/How it works-dummy.css

--- a/About Us/How it works-dummy.css
+++ b/About Us/How it works-dummy.css
@@ -195,6 +195,11 @@ body {
   }
 }
 /*Our Team */
+.Team{
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  color: var(--light);
+}
 
 /* Foot */
 .footer-clean {
