--- a/support/support.css
+++ b/support/support.css
@@ -59,144 +59,6 @@ body {
 }
 /* End: Navigation Bar */
 
-/* Start: Scholarships*/
-
-#scholarships {
-  width: 100%;
-  min-height: 100%;
-  background-image: linear-gradient(
-    var(--primary) 40%,
-    rgba(33, 150, 243, 0.5)
-  );
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}
-
-.scholarships-banner {
-  padding-top: 7%;
-}
-
-.banner-title {
-  font-family: "Montserrat", sans-serif;
-  font-size: 36px;
-}
-
-.banner-tagline {
-  font-size: 24px;
-  font-family: "lato", sans-serif;
-}
-
-.container-scholarships {
-  margin-top: 5%;
-  padding: 0 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card {
-  height: 280px;
-  max-width: 350px;
-  margin: 0 20px;
-  background: #0a2647;
-  transition: 0.4s;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-}
-.card:hover {
-  height: 470px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-}
-.card .img {
-  height: 200px;
-  width: 100%;
-}
-.card .img img {
-  height: 100%;
-  width: 100%;
-  border-radius: 3%;
-  object-fit: cover;
-}
-.card .top-text {
-  padding: 5px;
-}
-.card .top-text .name {
-  font-size: 25px;
-  font-weight: 600;
-  color: white;
-  font-family: "lato", sans-serif;
-}
-.card .top-text p {
-  font-size: 20px;
-  font-weight: 600;
-  font-family: "Rubik", sans-serif;
-  line-height: 20px;
-}
-.card .bottom-text {
-  padding: 0 20px 10px 20px;
-  margin-top: 5px;
-  background: white;
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.3s;
-}
-.card:hover .bottom-text {
-  opacity: 1;
-  visibility: visible;
-}
-.card .bottom-text .text {
-  text-align: center;
-}
-.card .bottom-text .btn {
-  margin: 10px 0;
-  text-align: left;
-}
-.card .bottom-text .btn a {
-  text-decoration: none;
-  background: #ffb100;
-  color: #0a2647;
-  padding: 5px 8px;
-  border-radius: 3px;
-  display: inline-flex;
-  transition: 0.2s;
-  font-size: 18px;
-}
-.card .bottom-text .btn a:hover {
-  transform: scale(1);
-}
-
-.scholarships-footer {
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
-.btn-cta,
-.btn-cta:hover {
-  text-decoration: none;
-  background: #ffb100;
-  color: #0a2647;
-  padding: 5px 8px;
-  border-radius: 3px;
-  font-size: 22px;
-}
-@media screen and (max-width: 1200px) {
-  #scholarships {
-    padding-top: 10%;
-  }
-  .container-scholarships {
-    flex-wrap: wrap;
-    flex-direction: column;
-  }
-  .card {
-    max-width: 700px;
-    margin: 20px 0;
-  }
-}
-
-/* End: Scholarships*/
-
-/
 /* Start: Footer */
 
 .footer-container {
@@ -294,6 +156,15 @@ body {
 
 #faqs {
   padding-top: 10%;
+  background-image: linear-gradient(
+    var(--primary) 40%,
+    rgba(33, 150, 243, 0.5)
+  );
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
 }
 .section {
   display: inline-block;
@@ -397,5 +268,386 @@ body {
 
   .answer p {
     font-size: 14px;
+  }
+}
+
+/* Contact */
+
+#contact {
+  background: linear-gradient(rgba(33, 150, 243, 0.5), var(--primary) 40%);
+}
+
+.contact {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  padding: 2rem;
+  background: linear-gradient(rgba(33, 150, 243, 0.5), var(--primary) 40%);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 2%;
+}
+
+.form {
+  width: 100%;
+  max-width: 820px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.contact-form {
+  background-color: var(--secondary);
+  position: relative;
+}
+
+.circle {
+  border-radius: 50%;
+  background: linear-gradient(135deg, transparent 20%, #149279);
+  position: absolute;
+}
+
+.circle.one {
+  width: 130px;
+  height: 130px;
+  top: 130px;
+  right: -40px;
+}
+
+.circle.two {
+  width: 80px;
+  height: 80px;
+  top: 10px;
+  right: 30px;
+}
+
+.contact-form:before {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color: var(--secondary);
+  transform: rotate(45deg);
+  top: 50px;
+  left: -13px;
+}
+
+form {
+  padding: 2.3rem 2.2rem;
+  z-index: 10;
+  overflow: hidden;
+  position: relative;
+}
+
+.title {
+  color: var(--primary);
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+  margin-bottom: 0.7rem;
+}
+
+.input-container {
+  position: relative;
+  margin: 1rem 0;
+}
+
+.input {
+  width: 100%;
+  outline: none;
+  border: 2px solid #fafafa;
+  background: none;
+  padding: 0.6rem 1.2rem;
+  color: var(--primary);
+  font-weight: 500;
+  font-size: 0.95rem;
+  letter-spacing: 0.5px;
+  border-radius: 25px;
+  transition: 0.3s;
+}
+
+textarea.input {
+  padding: 0.8rem 1.2rem;
+  min-height: 150px;
+  border-radius: 22px;
+  resize: none;
+  overflow-y: auto;
+}
+
+.input-container label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  padding: 0 0.4rem;
+  color: var(--primary);
+  font-size: 0.9rem;
+  font-weight: 400;
+  pointer-events: none;
+  z-index: 1000;
+  transition: 0.5s;
+}
+
+.input-container.textarea label {
+  top: 1rem;
+  transform: translateY(0);
+}
+
+.btn-contact {
+  padding: 0.6rem 1.3rem;
+  background-color: #fff;
+  border: 2px solid var(--primary);
+  font-size: 0.95rem;
+  color: var(--primary);
+  line-height: 1;
+
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 0;
+}
+
+.btn-contact:hover {
+  background-color: transparent;
+  color: #fff;
+}
+
+.input-container span {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  transform: translateY(-50%);
+  font-size: 0.8rem;
+  padding: 0 0.4rem;
+  color: transparent;
+  pointer-events: none;
+  z-index: 500;
+}
+
+.input-container span:before,
+.input-container span:after {
+  content: "";
+  position: absolute;
+  width: 10%;
+  opacity: 0;
+  transition: 0.3s;
+  height: 5px;
+  background-color: var(--secondary);
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-container span:before {
+  left: 50%;
+}
+
+.input-container span:after {
+  right: 50%;
+}
+
+.input-container.focus label {
+  top: 0;
+  transform: translateY(-50%);
+  left: 25px;
+  font-size: 0.8rem;
+}
+
+.input-container.focus span:before,
+.input-container.focus span:after {
+  width: 50%;
+  opacity: 1;
+}
+
+.contact-info {
+  padding: 2.3rem 2.2rem;
+  position: relative;
+}
+
+.contact-info .title {
+  color: var(--primary);
+}
+
+.text {
+  color: #333;
+  margin: 1.5rem 0 2rem 0;
+}
+
+.information {
+  display: flex;
+  color: #555;
+  margin: 0.7rem 0;
+  align-items: center;
+  font-size: 0.95rem;
+}
+
+.icon {
+  width: 28px;
+  margin-right: 0.7rem;
+}
+
+.social-media {
+  padding: 2rem 0 0 0;
+}
+
+.social-media p {
+  color: #333;
+}
+
+.social-icons {
+  display: flex;
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+.social-icons .icons {
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+  background: var(--primary);
+  color: #fff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 0.5rem;
+  transition: 0.3s;
+  padding-top: 10px;
+}
+
+.social-icons a:hover {
+  transform: scale(1.05);
+}
+
+.contact-info:before {
+  content: "";
+  position: absolute;
+  width: 110px;
+  height: 100px;
+  border: 22px solid var(--secondary);
+  border-radius: 50%;
+  bottom: -77px;
+  right: 50px;
+  opacity: 0.3;
+}
+
+.big-circle {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background: linear-gradient(to bottom, var(--secondary), #ac9309);
+  bottom: 50%;
+  right: 50%;
+  transform: translate(-40%, 38%);
+}
+
+.big-circle:after {
+  content: "";
+  position: absolute;
+  width: 360px;
+  height: 360px;
+  background-color: #fafafa;
+  border-radius: 50%;
+  top: calc(50% - 180px);
+  left: calc(50% - 180px);
+}
+
+.square {
+  position: absolute;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(181%, 11%);
+  opacity: 0.2;
+}
+
+@media (max-width: 850px) {
+  .form {
+    grid-template-columns: 1fr;
+  }
+
+  .contact-info:before {
+    bottom: initial;
+    top: -75px;
+    right: 65px;
+    transform: scale(0.95);
+  }
+
+  .contact-form:before {
+    top: -13px;
+    left: initial;
+    right: 70px;
+  }
+
+  .square {
+    transform: translate(140%, 43%);
+    height: 350px;
+  }
+
+  .big-circle {
+    bottom: 75%;
+    transform: scale(0.9) translate(-40%, 30%);
+    right: 50%;
+  }
+
+  .text {
+    margin: 1rem 0 1.5rem 0;
+  }
+
+  .social-media {
+    padding: 1.5rem 0 0 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 1.5rem;
+  }
+
+  .contact-info:before {
+    display: none;
+  }
+
+  .square,
+  .big-circle {
+    display: none;
+  }
+
+  form,
+  .contact-info {
+    padding: 1.7rem 1.6rem;
+  }
+
+  .text,
+  .information,
+  .social-media p {
+    font-size: 0.8rem;
+  }
+
+  .title {
+    font-size: 1.15rem;
+  }
+
+  .social-icons a {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+
+  .icon {
+    width: 23px;
+  }
+
+  .input {
+    padding: 0.45rem 1.2rem;
+  }
+
+  .btn-contact {
+    padding: 0.45rem 1.2rem;
   }
 }
