modified:   login-signup/login.css 	modified:   support/support.css

--- a/login-signup/login.css
+++ b/login-signup/login.css
@@ -433,3 +433,5 @@ select:focus {
     left: 50%;
   }
 }
+
+/* Credits to:  https://github.com/sefyudem/Sliding-Sign-In-Sign-Up-Form/blob/master/  */
