modified:   About Us/How it works-dummy.css 	modified:   About Us/Our story-dummy.css 	modified:   scholarships/scholarship.css 	modified:   support/support.css

--- a/scholarships/scholarship.css
+++ b/scholarships/scholarship.css
@@ -42,6 +42,10 @@ body {
   /* Change the duration and timing function to your preference */
 }
 
+.nav-link {
+  color: var(--primary);
+}
+
 .btn-login,
 .btn-login:hover {
   background-color: var(--primary);
