--- a/About Us/How it works-dummy.css
+++ b/About Us/How it works-dummy.css
@@ -47,6 +47,10 @@ body {
   /* Change the duration and timing function to your preference */
 }
 
+.nav-link {
+  color: var(--primary);
+}
+
 .btn-login,
 .btn-login:hover {
   background-color: var(--primary);
