modified:   index.css

--- a/index.css
+++ b/index.css
@@ -25,6 +25,12 @@ body {
   overflow-x: hidden;
 }
 
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
 /* Start: Navigation Bar */
 
 .nav-link:hover {
