--- a/support/support.css
+++ b/support/support.css
@@ -17,11 +17,10 @@
   --dark-2: #252728;
   --grey: #aaa;
   --light: #fff;
-  --primary-clr: #6c00f9;
   --white: #fff;
   --text-clr: #464646;
   --tabs-list-bg-clr: #dfc8fd;
-  --btn-hvr: #4e03b0;
+
 }
 
 body {
@@ -50,8 +49,6 @@ body {
 .nav-link {
   color: var(--primary);
 }
-
-
 
 .btn-login,
 .btn-login:hover {
@@ -162,7 +159,7 @@ body {
   opacity: 0.6;
 }
 
-/* Credit to https://epicbootstrap.com/snippets/footer-with-columns */
+/* Credits to https://epicbootstrap.com/snippets/footer-with-columns */
 
 #faqs {
   padding-top: 10%;
